--- a/index.html
+++ b/index.html
@@ -16,5 +16,26 @@
       <a href="https://github.com/MathijsWarlop/GalagaAssignmentv2" target="_blank">View on GitHub</a>
     </div>
 
+    <style>
+  .project-card {
+    border: 2px solid #333;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 15px 0;
+    background-color: #f5f5f5;
+  }
+  .project-card h3 {
+    margin-top: 0;
+  }
+  .project-card a {
+    text-decoration: none;
+    color: #007bff;
+  }
+  .project-card a:hover {
+    text-decoration: underline;
+  }
+</style>
+
+
   </body>
 </html>
