--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>Mathijs Warlop - Game Dev Portfolio</title>
+    <style>
+      .project-card {
+        border: 2px solid #333;
+        border-radius: 10px;
+        padding: 15px;
+        margin: 15px 0;
+        background-color: #f5f5f5;
+      }
+      .project-card h3 {
+        margin-top: 0;
+      }
+      .project-card a {
+        text-decoration: none;
+        color: #007bff;
+      }
+      .project-card a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello, I’m Mathijs Warlop 👋</h1>
@@ -10,32 +29,17 @@
 
     <h2>Projects</h2>
 
-    <div>
+    <div class="project-card">
       <h3>Galaga Clone</h3>
       <p>A C++/SDL project where I recreated the classic Galaga arcade game.</p>
       <a href="https://github.com/MathijsWarlop/GalagaAssignmentv2" target="_blank">View on GitHub</a>
     </div>
 
-    <style>
-  .project-card {
-    border: 2px solid #333;
-    border-radius: 10px;
-    padding: 15px;
-    margin: 15px 0;
-    background-color: #f5f5f5;
-  }
-  .project-card h3 {
-    margin-top: 0;
-  }
-  .project-card a {
-    text-decoration: none;
-    color: #007bff;
-  }
-  .project-card a:hover {
-    text-decoration: underline;
-  }
-</style>
-
+    <div class="project-card">
+      <h3>Raytracer & Rasteriser</h3>
+      <p>A custom C++ project implementing both a raytracer and rasterizer, demonstrating 3D rendering techniques and graphics pipeline understanding.</p>
+      <a href="https://github.com/MathijsWarlop/RaytracerSlashRasteriser" target="_blank">View on GitHub</a>
+    </div>
 
   </body>
 </html>
