--- a/index.html
+++ b/index.html
@@ -41,5 +41,12 @@
       <a href="https://github.com/MathijsWarlop/RaytracerSlashRasteriser" target="_blank">View on GitHub</a>
     </div>
 
+    <div class="project-card">
+      <h3>Bitymi (Unity, Group Project)</h3>
+      <p>A cooperative Unity game where players climb and interact in a dynamic environment. I was responsible for <strong>player movement</strong> and implementing <strong>UI elements</strong>.</p>
+      <a href="https://therambi.itch.io/bitymi" target="_blank">Play on itch.io</a>
+    </div>
+
+
   </body>
 </html>
