--- a/index.html
+++ b/index.html
@@ -31,18 +31,22 @@
 
     <div class="project-card">
       <h3>Galaga Clone</h3>
+        <img src="images/Galaga.png" alt="Galaga Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
       <p>A C++/SDL project where I recreated the classic Galaga arcade game.</p>
       <a href="https://github.com/MathijsWarlop/GalagaAssignmentv2" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project-card">
       <h3>Raytracer & Rasteriser</h3>
+        <img src="images/Raytracer.png" alt="Raytracer Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
+        <img src="images/rasteriser.png" alt="Rasteriser Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
       <p>A custom C++ project implementing both a raytracer and rasterizer, demonstrating 3D rendering techniques and graphics pipeline understanding.</p>
       <a href="https://github.com/MathijsWarlop/RaytracerSlashRasteriser" target="_blank">View on GitHub</a>
     </div>
 
     <div class="project-card">
       <h3>Bitymi (Unity, Group Project)</h3>
+        <img src="images/bitymi.png" alt="Bitymi Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
       <p>A cooperative Unity game where players climb and interact in a dynamic environment. I was mainly responsible for <strong>player movement</strong> and implementing <strong>UI elements</strong>.</p>
       <a href="https://therambi.itch.io/bitymi" target="_blank">Play on itch.io</a>
     </div>
