--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </style>
   </head>
   <body>
-    <h1>Hello, I’m Mathijs Warlop 👋</h1>
-    <p>Welcome to my game development portfolio.</p>
+    <h1>Hello, I’m Mathijs Warlop</h1>
+    <p>Welcome to my game development portfolio. I am currently studying at Digital Art and Entertainment in Kortrijk, Belgium</p>
 
     <h2>Projects</h2>
 
