--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <h1>Hello, I’m Mathijs Warlop</h1>
-    <p>Welcome to my game development portfolio. I am currently studying at Digital Art and Entertainment in Kortrijk, Belgium</p>
+    <p>Welcome to my game development portfolio. I am currently studying Game Development at Howest, Digital Art and Entertainment in Kortrijk, Belgium</p>
 
     <h2>Projects</h2>
 
