--- a/index.html
+++ b/index.html
@@ -1,55 +1,190 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Mathijs Warlop - Game Dev Portfolio</title>
-    <style>
-      .project-card {
-        border: 2px solid #333;
-        border-radius: 10px;
-        padding: 15px;
-        margin: 15px 0;
-        background-color: #f5f5f5;
-      }
-      .project-card h3 {
-        margin-top: 0;
-      }
-      .project-card a {
-        text-decoration: none;
-        color: #007bff;
-      }
-      .project-card a:hover {
-        text-decoration: underline;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Hello, I’m Mathijs Warlop</h1>
-    <p>Welcome to my game development portfolio. I am currently studying Game Development at Howest, Digital Art and Entertainment in Kortrijk, Belgium</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Mathijs Warlop - Game Dev Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* === Base Styling === */
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background: #0f1116;
+      color: #e0e0e0;
+      line-height: 1.6;
+    }
 
+    h1, h2, h3 {
+      color: #ffffff;
+      margin-bottom: 10px;
+    }
+
+    a {
+      color: #4da3ff;
+      text-decoration: none;
+      transition: color 0.2s ease;
+    }
+
+    a:hover {
+      color: #73c2ff;
+    }
+
+    /* === Layout === */
+    header {
+      background: linear-gradient(135deg, #1c1f26, #252a33);
+      padding: 40px 20px;
+      text-align: center;
+      border-bottom: 2px solid #333;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      max-width: 700px;
+      margin: 0 auto;
+      font-size: 1.1em;
+      color: #b0b0b0;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    /* === About Section === */
+    .about {
+      background: #1a1d24;
+      border-radius: 12px;
+      padding: 25px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      margin-bottom: 40px;
+    }
+
+    .about h2 {
+      border-bottom: 2px solid #4da3ff;
+      padding-bottom: 10px;
+      margin-bottom: 15px;
+    }
+
+    .about-info {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      font-size: 0.95em;
+    }
+
+    .about-info div {
+      flex: 1 1 250px;
+      background: #20242d;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+    }
+
+    /* === Project Cards === */
+    .project-card {
+      background: #1a1d24;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 25px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+    }
+
+    .project-card img {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 8px;
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    .project-card p {
+      color: #c9c9c9;
+    }
+
+    footer {
+      text-align: center;
+      padding: 25px 0;
+      border-top: 2px solid #333;
+      color: #888;
+      font-size: 0.9em;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2em;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Mathijs Warlop</h1>
+    <p>Aspiring Game Developer from Belgium — passionate about C++, SDL, and Unity. Currently studying Game Development at DAE (Howest).</p>
+  </header>
+
+  <div class="container">
+
+    <!-- About Section -->
+    <section class="about">
+      <h2>About Me</h2>
+      <div class="about-info">
+        <div><strong>Location:</strong> Roeselare, Belgium</div>
+        <div><strong>Phone:</strong> +32 468 31 29 37</div>
+        <div><strong>Email:</strong> <a href="mailto:Mathijs.warlop@gmail.com">Mathijs.warlop@gmail.com</a></div>
+        <div><strong>Portfolio:</strong> <a href="https://mathijswarlop.github.io/" target="_blank">mathijswarlop.github.io</a></div>
+        <div><strong>Languages:</strong> Dutch, English</div>
+        <div><strong>Education:</strong> DAE Game Development (Expected June 2026)</div>
+        <div><strong>License:</strong> Driver License</div>
+      </div>
+
+      <p style="margin-top:15px;">
+        Passionate about game programming, rendering, and gameplay systems. Experienced with <strong>C++, SDL, and Unity</strong>.
+        I’m seeking an internship from <strong>mid-February 2026 to mid-June 2026</strong> where I can grow my technical skills and collaborate in a creative team environment.
+      </p>
+    </section>
+
+    <!-- Projects Section -->
     <h2>Projects</h2>
 
     <div class="project-card">
       <h3>Bitymi (Unity, Group Project)</h3>
-        <img src="images/bitymi.png" alt="Bitymi Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
-      <p>This was a group project i made, it's a cooperative tower climbing game. i was mainly responsable for the player movement, abilities and implementing ui</p>
-      <a href="https://therambi.itch.io/bitymi" target="_blank">Play on itch.io</a>
+      <img src="images/bitymi.png" alt="Bitymi Screenshot">
+      <p>A cooperative tower-climbing game created in Unity. I was mainly responsible for player movement, abilities, and UI implementation.</p>
+      <a href="https://therambi.itch.io/bitymi" target="_blank">🎮 Play on itch.io</a>
     </div>
 
     <div class="project-card">
       <h3>Raytracer & Rasteriser</h3>
-        <img src="images/Raytracer.png" alt="Raytracer Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
-        <img src="images/rasteriser.png" alt="Rasteriser Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
-      <p>I made these two project for demonstrating 3D rendering techniques and graphics pipeline understanding.</p>
-      <a href="https://github.com/MathijsWarlop/RaytracerSlashRasteriser" target="_blank">View on GitHub</a>
+      <img src="images/Raytracer.png" alt="Raytracer Screenshot">
+      <img src="images/rasteriser.png" alt="Rasteriser Screenshot">
+      <p>Projects built to demonstrate 3D rendering techniques and an understanding of the graphics pipeline.</p>
+      <a href="https://github.com/MathijsWarlop/RaytracerSlashRasteriser" target="_blank">🔗 View on GitHub</a>
     </div>
 
     <div class="project-card">
-      <h3>Galaga Clone</h3>
-        <img src="images/Galaga.png" alt="Galaga Screenshot" style="width:100%; max-width:400px; border-radius:5px;">
-      <p>A C++/SDL project where I recreated the classic Galaga arcade game.</p>
-      <a href="https://github.com/MathijsWarlop/GalagaAssignmentv2" target="_blank">View on GitHub</a>
+      <h3>Galaga Clone (C++ / SDL)</h3>
+      <img src="images/Galaga.png" alt="Galaga Screenshot">
+      <p>A C++/SDL recreation of the classic Galaga arcade game, featuring player movement, enemy waves, and shooting mechanics.</p>
+      <a href="https://github.com/MathijsWarlop/GalagaAssignmentv2" target="_blank">🔗 View on GitHub</a>
     </div>
 
-  </body>
+  </div>
+
+  <footer>
+    © 2025 Mathijs Warlop | Game Developer | Built with HTML & CSS
+  </footer>
+
+</body>
 </html>
