--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div><strong>Email:</strong> <a href="mailto:Mathijs.warlop@gmail.com">Mathijs.warlop@gmail.com</a></div>
         <div><strong>License:</strong> Driver License</div>        
         <div><strong>Languages:</strong> Dutch, English</div>
-        <div><strong>Education:</strong> DAE Game Development (Expected June 2026)</div>
+        <div><strong>Education:</strong> DAE Game Development (Expected Graduation June 2026)</div>
       </div>
 
       <p style="margin-top:15px;">
